fixed border issue on mobile devices for menu, website title word-wrap added, added checked function for check boxes

--- a/style.css
+++ b/style.css
@@ -832,6 +832,7 @@ p.lead {
 a.home-link {
     color: #000;
     text-decoration: none;
+    word-wrap: break-word;
 }
 
 .site-description {
